fix drop down label overlap #777

--- a/src/Client/Web/Bit.Client.Web.BlazorUI/Styles/Fluent/Inputs/bit-drop-down.fluent.scss
+++ b/src/Client/Web/Bit.Client.Web.BlazorUI/Styles/Fluent/Inputs/bit-drop-down.fluent.scss
@@ -2,6 +2,8 @@
 
 .bit-drp-fluent {
     font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+    display: flex;
+    flex-flow: column nowrap;
 
     label {
         font-size: rem(14px);
